2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSInfoPanel.m: Fix app icon button size at 48x48 and use
	NSImageScaleProportionallyUpOrDown.
	This prevents icons with large sizes (e.g. 512x512 pixel) from
	making the info panel really big.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSImageCell.h:
	* Headers/AppKit/NSCell.h: Move NSImageScaling constants to NSCell
	* Source/NSImageCell.m:
	* Source/NSCell.m: Refactor the image scaling logic to a private
	method in NSCell, -_scaleImageWithSize:toFitInSize:scalingType:
	which can be share by NSImageCell, NSButtonCell, and any other
	cell classes that need it.
	* Source/NSButtonCell.m:
	* Headers/AppKit/NSButtonCell.h: Implement -imageScaling and
	-setImageScaling methods. 
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Remove the
	-drawImage:inButtonCell:withFrame:position: API intended
	to let themes substitute images right before drawing,
	as IMHO it's the wrong place to hook in new images (by
	the time this method was caleld, sizing/positionging
	was already done).

2011-11-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: Better handling for flattened properties
	to set the tool tips of an object.

2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m
	([GSKeyValueBinding-transformValue:withOptions:]): Don't use @""
	when no null placeholder is defined.

2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColorWell.m (-objectValue, -setObjectValue:,
	-takeObjectValueFrom:): Add these missing methods.

2011-11-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep+PNG.m:
	HACK: PNG can not represent 72DPI exactly. If the pixels-per-meter value is
	near 72DPI, assume it is exactly 72 DPI. Note that the same problem occurrs
	at 144DPI, or 288DPI... so don't use PNG for resolution independent graphics.

2011-11-06 Fred Kiefer <FredKiefer@gmx.de>
